--- a/css/style.css
+++ b/css/style.css
@@ -102,61 +102,32 @@
   .heading {
     font-size: 35px; } }
 
-@media all and (orientation: landscape) and (min-width: 1000px) {
-  .header {
-    grid-template-rows: repeat(24, 1fr);
-    grid-template-columns: repeat(24, 1fr);
-    padding-left: 10%;
-    padding-right: 10%;
-    height: 85vh; } }
-
 @media all and (orientation: landscape) {
   .logo-div {
-    grid-row: 3 / 5;
+    grid-row: 2 / 5;
     grid-column: 5 / 9;
     display: inline-grid; }
     .logo-div__img {
       max-width: 50%;
       height: auto;
-      justify-self: center; } }
-  @media all and (orientation: landscape) and (min-width: 1000px) {
-    .logo-div {
-      grid-row: 2 / 6;
-      grid-column: 1 / 3; }
-      .logo-div__img {
-        max-width: 100%;
-        align-self: center; } }
-
-@media all and (orientation: landscape) {
+      justify-self: center;
+      align-self: end; }
   .logo-text {
     grid-row: 5 / 6;
     grid-column: 5 / 9;
     text-align: center;
     font-weight: bold;
-    font-size: 30px; } }
-  @media all and (orientation: landscape) and (min-width: 1000px) {
-    .logo-text {
-      grid-row: 2 / 6;
-      grid-column: 3 / 7;
-      align-self: center;
-      font-size: 20px;
-      margin: 0;
-      text-align: left; } }
-
-@media all and (orientation: landscape) {
+    font-size: 20px;
+    margin: 0; }
   .heading {
-    grid-row: 6 / 7;
+    grid-row: 7 / 9;
     grid-column: 3 / 11;
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
     margin: 0; } }
-  @media all and (orientation: landscape) and (min-width: 1000px) {
+  @media all and (orientation: landscape) and (min-height: 450px) {
     .heading {
-      grid-column: 1 / 10;
-      grid-row: 10 / 17;
-      text-align: left;
-      font-size: 30px;
-      font-weight: bold; } }
+      font-size: 25px; } }
   @media all and (orientation: landscape) and (min-width: 1350px) {
     .heading {
       font-size: 40px;
@@ -166,18 +137,16 @@
 
 @media all and (orientation: landscape) {
   .btn__join-event {
-    grid-row: 8 / 10;
+    grid-row: 10 / 12;
     grid-column: 5 / 9;
     background-color: #AADC59;
     color: white;
     border-radius: 12px;
     border: none;
     font-size: 15px; } }
-  @media all and (orientation: landscape) and (min-width: 1000px) {
+  @media all and (orientation: landscape) and (min-height: 450px) {
     .btn__join-event {
-      grid-row: 17 / 19;
-      grid-column: 1 / 6;
-      font-size: 20px; } }
+      height: 75%; } }
   @media all and (orientation: landscape) and (min-width: 1350px) {
     .btn__join-event {
       grid-row: 19 / 21; } }
@@ -185,16 +154,6 @@
 @media all and (orientation: landscape) {
   .header-backdrop-div {
     display: none; } }
-  @media all and (orientation: landscape) and (min-width: 1000px) {
-    .header-backdrop-div {
-      display: inline-grid;
-      grid-column: 10 / 25;
-      grid-row: 5 / 25; }
-      .header-backdrop-div-img {
-        max-width: 100%;
-        height: auto;
-        align-self: end;
-        justify-self: center; } }
   @media all and (orientation: landscape) and (min-width: 1200px) {
     .header-backdrop-div {
       grid-column: 9 / 25;
@@ -203,6 +162,83 @@
     .header-backdrop-div {
       grid-column: 13 / 25;
       grid-row: 6 / 25; } }
+
+@media all and (orientation: landscape) and (min-width: 800px) {
+  .logo-div__img {
+    max-width: 35%; } }
+  @media all and (orientation: landscape) and (min-width: 800px) and (min-height: 600px) {
+    .logo-div__img {
+      max-width: 50%; } }
+
+@media all and (orientation: landscape) and (min-width: 800px) and (min-height: 650px) {
+  .heading {
+    font-size: 30px; } }
+
+@media all and (orientation: landscape) and (min-width: 800px) and (min-height: 500px) {
+  .btn__join-event {
+    font-size: 20px; } }
+
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) {
+  .header {
+    grid-template-rows: repeat(24, 1fr);
+    grid-template-columns: repeat(24, 1fr);
+    padding-left: 10%;
+    padding-right: 10%;
+    height: 100vh; } }
+
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 600px) {
+  .header {
+    height: 90vh; } }
+
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 800px) {
+  .header {
+    height: 95vh; } }
+
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) {
+  .logo-text {
+    grid-row: 2 / 6;
+    grid-column: 3 / 7;
+    align-self: center;
+    font-size: 20px;
+    margin: 0;
+    text-align: left; } }
+
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) {
+  .logo-div {
+    grid-row: 2 / 6;
+    grid-column: 1 / 3; }
+    .logo-div__img {
+      max-width: 100%;
+      align-self: center; } }
+
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) {
+  .heading {
+    grid-column: 1 / 10;
+    grid-row: 10 / 17;
+    text-align: left;
+    font-size: 30px;
+    font-weight: bold; } }
+
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) {
+  .btn__join-event {
+    grid-row: 18 / 20;
+    grid-column: 1 / 6;
+    font-size: 20px; } }
+
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) {
+  .header-backdrop-div {
+    display: inline-grid;
+    grid-column: 10 / 25;
+    grid-row: 5 / 25; }
+    .header-backdrop-div-img {
+      max-width: 100%;
+      height: auto;
+      align-self: end;
+      justify-self: center; } }
+
+@media all and (orientation: landscape) and (min-width: 1100px) and (min-height: 850px) {
+  .heading {
+    grid-row: 11 / 18; } }
 
 body {
   margin: 0;
@@ -241,47 +277,56 @@ body {
   .productImg-div {
     grid-row: 8 / 13;
     grid-column: 2 / 12;
-    align-self: end; }
+    align-self: end;
+    display: inline-grid; }
     .productImg-div__img {
       max-width: 100%;
       height: auto;
-      overflow: hidden; }
-  .explain {
-    grid-row: 4 / 7;
-    grid-column: 2 / 12;
-    text-align: center; }
-    .explain__heading {
-      font-size: 15px;
-      color: black;
-      font-weight: bold; } }
-    @media all and (orientation: portrait) and (min-height: 600px) {
-      .explain__heading {
-        font-size: 17px; } }
-    @media all and (orientation: portrait) and (min-height: 700px) {
-      .explain__heading {
-        font-size: 19px; } }
-    @media all and (orientation: portrait) and (min-height: 800px) {
-      .explain__heading {
-        font-size: 21px; } }
-    @media all and (orientation: portrait) and (min-height: 1200px) {
-      .explain__heading {
-        font-size: 25px; } }
+      overflow: hidden;
+      justify-self: center; } }
+    @media all and (orientation: portrait) and (min-width: 375px) {
+      .productImg-div__img {
+        max-width: 80%; } }
 
 @media all and (orientation: portrait) {
+  .explain__heading {
+    grid-row: 4 / 5;
+    grid-column: 2 / 12;
+    text-align: center;
+    font-size: 15px;
+    color: black;
+    font-weight: bold; } }
+  @media all and (orientation: portrait) and (min-height: 600px) {
+    .explain__heading {
+      font-size: 17px; } }
+  @media all and (orientation: portrait) and (min-height: 700px) {
+    .explain__heading {
+      font-size: 19px; } }
+  @media all and (orientation: portrait) and (min-height: 800px) {
+    .explain__heading {
+      font-size: 21px; } }
+  @media all and (orientation: portrait) and (min-height: 1200px) {
+    .explain__heading {
+      font-size: 25px; } }
+
+@media all and (orientation: portrait) {
+  .explain__paragraph {
+    font-size: 12px;
+    grid-row: 5 / 7;
+    grid-column: 2 / 12;
+    text-align: center; } }
+  @media all and (orientation: portrait) and (min-height: 600px) {
     .explain__paragraph {
-      font-size: 12px; } }
-    @media all and (orientation: portrait) and (min-height: 600px) {
-      .explain__paragraph {
-        font-size: 14px; } }
-    @media all and (orientation: portrait) and (min-height: 700px) {
-      .explain__paragraph {
-        font-size: 16px; } }
-    @media all and (orientation: portrait) and (min-height: 800px) {
-      .explain__paragraph {
-        font-size: 18px; } }
-    @media all and (orientation: portrait) and (min-height: 1200px) {
-      .explain__paragraph {
-        font-size: 22px; } }
+      font-size: 14px; } }
+  @media all and (orientation: portrait) and (min-height: 700px) {
+    .explain__paragraph {
+      font-size: 16px; } }
+  @media all and (orientation: portrait) and (min-height: 800px) {
+    .explain__paragraph {
+      font-size: 18px; } }
+  @media all and (orientation: portrait) and (min-height: 1200px) {
+    .explain__paragraph {
+      font-size: 22px; } }
 
 @media all and (orientation: landscape) {
   .about {
@@ -303,78 +348,65 @@ body {
     grid-template-columns: repeat(12, 1fr);
     height: 100vh; }
   .num {
+    display: none;
     grid-row: 3 / 5;
-    grid-column: 3 / 5;
+    grid-column: 4 / 5;
     background: #AADC59;
     border-radius: 50%;
     color: white;
     padding: 10%;
-    height: 40px;
-    width: 40px;
+    height: 20px;
+    width: 20px;
     text-align: center;
-    line-height: 40px;
-    font-size: 30px;
+    line-height: 20px;
+    font-size: 20px;
     font-weight: bold;
     align-self: center;
-    justify-self: center; } }
-  @media all and (orientation: landscape) and (min-width: 1000px) {
+    justify-self: center;
+    margin: 0; } }
+  @media all and (orientation: landscape) and (min-height: 400px) {
     .num {
-      grid-row: 2 / 4;
-      grid-column: 5 / 9; } }
-  @media all and (orientation: landscape) and (min-width: 1200px) {
-    .num {
-      height: 60px;
-      width: 60px;
-      line-height: 60px;
-      font-size: 60px; } }
+      margin-bottom: 5%; } }
 
 @media all and (orientation: landscape) {
   .productImg-div {
     grid-row: 2 / 12;
-    grid-column: 7 / 13;
+    grid-column: 7 / 12;
     align-self: center; }
     .productImg-div__img {
       max-width: 100%;
       height: auto;
-      overflow: hidden; } }
-  @media all and (orientation: landscape) and (min-width: 1000px) {
-    .productImg-div {
-      grid-column: 3 / 11;
-      grid-row: 6 / 9; } }
+      overflow: hidden; }
+  .explain__heading {
+    grid-row: 4 / 5;
+    grid-column: 2 / 7;
+    text-align: center;
+    font-size: 14px;
+    color: black;
+    font-weight: bold;
+    margin: 0; } }
+  @media all and (orientation: landscape) and (min-height: 400px) {
+    .explain__heading {
+      margin: 5% 0;
+      font-size: 18px; } }
 
 @media all and (orientation: landscape) {
-  .explain {
-    grid-row: 4 / 11;
-    grid-column: 4 / 10;
-    text-align: center; }
-    .explain__heading {
-      font-size: 14px;
-      color: black;
-      font-weight: bold; } }
-    @media all and (orientation: landscape) and (min-width: 650px) {
-      .explain__heading {
-        font-size: 16px; } }
+  .explain__paragraph {
+    grid-row: 5 / 9;
+    grid-column: 2 / 7;
+    font-size: 12px;
+    margin: 0;
+    padding-top: 5%;
+    text-align: center; } }
+  @media all and (orientation: landscape) and (min-height: 400px) {
+    .explain__paragraph {
+      font-size: 16px; } }
 
-@media all and (orientation: landscape) {
-    .explain__paragraph {
-      font-size: 12px; } }
-    @media all and (orientation: landscape) and (min-width: 650px) {
-      .explain__paragraph {
-        font-size: 14px; } }
-  @media all and (orientation: landscape) and (min-width: 1000px) {
-    .explain {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between; }
-      .explain__heading {
-        font-size: 18px; }
-      .explain__paragraph {
-        font-size: 16px; } }
-  @media all and (orientation: landscape) and (min-width: 1200px) {
-    .explain__heading {
-      font-size: 22px; }
-    .explain__paragraph {
-      font-size: 20px; } }
+@media all and (orientation: landscape) and (min-width: 600px) {
+  .explain__heading {
+    font-size: 18px; }
+  .explain__paragraph {
+    font-size: 16px; } }
 
 /*
 .about {
