--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -158,22 +158,17 @@
 }
 }
 
-
+// ********************************************************************************************************
 // Styles for header section - mobile landscape and desktop
+// landscape mode - start at smallest screen - 550x300 
+// 1. Expand width until reach landscape mode
+// 2. Move up in height and repeat
+
+
 @media all and (orientation:landscape) {
 
-    .header {
-        @media (min-width: 1000px) {
-            grid-template-rows: repeat(24, 1fr);
-            grid-template-columns: repeat(24, 1fr);
-            padding-left: 10%;
-            padding-right: 10%;
-            height: 85vh;
-        }
-    }
-
     .logo-div {
-        grid-row: 3 / 5;
+        grid-row: 2 / 5;
         grid-column: 5 / 9;
         display: inline-grid;
 
@@ -181,16 +176,7 @@
             max-width: 50%;
             height: auto;
             justify-self: center;
-        }
-
-        @media (min-width: 1000px) {
-            grid-row: 2 / 6;
-            grid-column: 1 / 3;   //$
-
-            &__img {
-                max-width: 100%;
-                align-self: center;
-            }
+            align-self: end;
         }
 
     }
@@ -200,32 +186,22 @@
         grid-column: 5 / 9;   
         text-align: center;
         font-weight: bold;
-        font-size: 30px;
-
-        @media (min-width: 1000px) {
-            grid-row: 2 / 6;
-            grid-column: 3 / 7;  // $
-            align-self: center;
-            font-size: 20px;
-            margin: 0;
-            text-align: left;
-        }
+        font-size: 20px;
+        margin: 0;
     }
 
     .heading {
-        grid-row: 6 / 7;
+        grid-row: 7 / 9;
         grid-column: 3 / 11;
-        font-size: 25px;
+        font-size: 20px;
         text-align: center;
         margin: 0;
 
-        @media (min-width: 1000px) {
-            grid-column: 1 / 10;   // &
-            grid-row: 10 / 17;
-            text-align: left;
-            font-size: 30px;
-            font-weight: bold;
+
+        @media (min-height: 450px) {
+            font-size: 25px;
         }
+    
 
         @media (min-width: 1350px) {
             font-size: 40px;
@@ -236,7 +212,7 @@
     }
 
     .btn__join-event {
-        grid-row: 8 / 10;
+        grid-row: 10 / 12;
         grid-column: 5 / 9;     
         background-color: #AADC59;
         color: white;
@@ -244,10 +220,8 @@
         border: none;
         font-size: 15px;
 
-        @media (min-width: 1000px) {
-            grid-row: 17 / 19;
-            grid-column: 1 / 6;   // %
-            font-size: 20px
+        @media (min-height: 450px) {
+            height: 75%;
         }
 
         @media (min-width: 1350px) {
@@ -258,19 +232,6 @@
 
     .header-backdrop-div {
         display: none;
-
-        @media (min-width: 1000px) {
-            display: inline-grid;
-            grid-column: 10 / 25;
-            grid-row: 5 / 25;
-
-            &-img {
-                max-width: 100%;
-                height: auto;
-                align-self: end;
-                justify-self: center;
-            }
-        }
 
         @media (min-width: 1200px) {
             grid-column: 9 / 25;
@@ -285,6 +246,118 @@
 
     }
 
+
+    // Sliding scale... horizontal
+
+    @media (min-width: 800px) {
+        .logo-div {
+            &__img {
+                max-width: 35%;
+
+                @media (min-height: 600px) {
+                    max-width: 50%;
+                }
+            }
+        }
+
+        .heading {
+            @media (min-height: 650px) {
+                font-size: 30px;
+            }
+        }
+
+        .btn__join-event {
+            @media (min-height: 500px) {
+                font-size: 20px;
+            }
+        }
+    }
+
+    // Goes to desktop mode 
+    @media (min-width: 1000px) {
+        .header {
+            @media (min-height: 500px) {
+                grid-template-rows: repeat(24, 1fr);
+                grid-template-columns: repeat(24, 1fr);
+                padding-left: 10%;
+                padding-right: 10%;
+                height: 100vh;
+            }
+
+            @media (min-height: 600px) {
+                height: 90vh;
+            }
+
+            @media (min-height: 800px) {
+                height: 95vh;
+            }
+
+        }
+
+        .logo-text {
+            @media (min-height: 500px) {
+                grid-row: 2 / 6;
+                grid-column: 3 / 7;  
+                align-self: center;
+                font-size: 20px;
+                margin: 0;
+                text-align: left;
+            }
+        }
+
+        .logo-div {
+            @media (min-height: 500px) {
+                grid-row: 2 / 6;
+                grid-column: 1 / 3;  
+    
+                &__img {
+                    max-width: 100%;
+                    align-self: center;
+                }
+            }
+        }
+
+        .heading {
+            @media (min-height: 500px) {
+                grid-column: 1 / 10;   
+                grid-row: 10 / 17;
+                text-align: left;
+                font-size: 30px;
+                font-weight: bold;
+            }
+        }
+
+        .btn__join-event {
+            @media (min-height: 500px) {
+                grid-row: 18 / 20;
+                grid-column: 1 / 6;  
+                font-size: 20px
+            }
+        }
+
+        .header-backdrop-div {
+            @media (min-height: 500px) {
+                display: inline-grid;
+                grid-column: 10 / 25;
+                grid-row: 5 / 25;
+    
+                &-img {
+                    max-width: 100%;
+                    height: auto;
+                    align-self: end;
+                    justify-self: center;
+                }
+            }
+        }
+    }
+
+    @media (min-width: 1100px) {
+        .heading {
+            @media (min-height: 850px) {
+                grid-row: 11 / 18;
+            }
+        }
+    }
 
 
 }
