--- a/sass/main.scss
+++ b/sass/main.scss
@@ -49,23 +49,28 @@ body {
     grid-row: 8 / 13;
     grid-column: 2 / 12;
     align-self: end;
+    display: inline-grid;
 
     &__img {
         max-width: 100%;
         height: auto;
         overflow: hidden;
+        justify-self: center;
+
+        @media (min-width: 375px) {
+            max-width: 80%;
+        }
     }
 }
 
-.explain {
-    grid-row: 4 / 7;
-    grid-column: 2 / 12;
-    text-align: center;
+.explain__heading {
+        grid-row: 4 / 5;
+        grid-column: 2 / 12;
+        text-align: center;
+        font-size: 15px;
+        color: black;
+        font-weight: bold;
 
-    &__heading {
-    font-size: 15px;
-    color: black;
-    font-weight: bold;
         @media (min-height: 600px) {
             font-size: 17px;
         }
@@ -83,8 +88,11 @@ body {
         }
     }
 
-    &__paragraph {
+.explain__paragraph {
         font-size: 12px;
+        grid-row: 5 / 7;
+        grid-column: 2 / 12;
+        text-align: center;
 
         @media (min-height: 600px) {
             font-size: 14px;
@@ -103,7 +111,9 @@ body {
         }
     }
 
-}
+    @media (min-height: 908px) {
+    
+    }
 
 }
 
@@ -131,37 +141,32 @@ body {
     }
     
     .num {
+        display: none;
         grid-row: 3 / 5;
-        grid-column: 3 / 5;
+        grid-column: 4 / 5;
         background: #AADC59;
         border-radius: 50%;
         color: white;
         padding: 10%;
-        height: 40px;
-        width: 40px;
+        height: 20px;
+        width: 20px;
         text-align: center;
-        line-height: 40px;
-        font-size: 30px;
+        line-height: 20px;
+        font-size: 20px;
         font-weight: bold;
         align-self: center;
         justify-self: center;
+        margin: 0;
 
-        @media (min-width: 1000px) {
-            grid-row: 2 / 4;
-            grid-column: 5 / 9;
+        @media (min-height: 400px) {
+            margin-bottom: 5%;
         }
 
-        @media (min-width: 1200px) {
-            height: 60px;
-            width: 60px;
-            line-height: 60px;
-            font-size: 60px;
-        }
     }
     
     .productImg-div {
         grid-row: 2 / 12;
-        grid-column: 7 / 13;
+        grid-column: 7 / 12;
         align-self: center;
     
         &__img {
@@ -170,60 +175,51 @@ body {
             overflow: hidden;
         }
 
-        @media (min-width: 1000px) {
-            grid-column: 3 / 11;
-            grid-row: 6 / 9;
-        }
     }
     
-    .explain {
-        grid-row: 4 / 11;
-        grid-column: 4 / 10;
-        text-align: center;
     
-        &__heading {
+    .explain__heading {
+        grid-row: 4 / 5;
+        grid-column: 2 / 7;
+        text-align: center;
         font-size: 14px;
         color: black;
         font-weight: bold;
-            @media (min-width: 650px) {
-                font-size: 16px;
-            }
+        margin: 0;
+
+        @media (min-height: 400px) {
+            margin: 5% 0;
+            font-size: 18px;
         }
     
-        &__paragraph {
-            font-size: 12px;
+        }
     
-            @media (min-width: 650px) {
-                font-size: 14px;
+        .explain__paragraph {
+            grid-row: 5 / 9;
+            grid-column: 2 / 7;
+            font-size: 12px;
+            margin: 0;
+            padding-top: 5%;
+            text-align: center;
+
+            @media (min-height: 400px) {
+                font-size: 16px;
             }
+
         }  
 
-        @media (min-width: 1000px) {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
+        @media (min-width: 600px) {
+            .explain__heading {
+                font-size: 18px;
+            }
 
-
-            &__heading {
-                font-size: 18px;  
-            }      
-
-            &__paragraph {
+            .explain__paragraph {
                 font-size: 16px;
             }
-        }
 
-        @media (min-width: 1200px) {
-            &__heading {
-                font-size: 22px;  
-            }      
-
-            &__paragraph {
-                font-size: 20px;
-            }
         }
     }    
-}
+
 
 /*
 .about {
