--- a/css/style.css
+++ b/css/style.css
@@ -240,12 +240,6 @@
   .heading {
     grid-row: 11 / 18; } }
 
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif; }
-
 @media all and (orientation: portrait) {
   .about {
     display: grid;
@@ -330,27 +324,16 @@ body {
 
 @media all and (orientation: landscape) {
   .about {
-    display: grid;
     background: rgba(196, 196, 196, 0.29);
-    height: 200vh;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 1fr); } }
-  @media all and (orientation: landscape) and (min-width: 1000px) {
-    .about {
-      height: 100vh;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr; } }
-
-@media all and (orientation: landscape) {
+    height: auto; }
   .about-item {
     display: grid;
-    grid-template-rows: repeat(12, 1fr);
-    grid-template-columns: repeat(12, 1fr);
-    height: 100vh; }
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    height: auto;
+    padding: 10% 5%; }
   .num {
     display: none;
-    grid-row: 3 / 5;
-    grid-column: 4 / 5;
     background: #AADC59;
     border-radius: 50%;
     color: white;
@@ -363,41 +346,38 @@ body {
     font-weight: bold;
     align-self: center;
     justify-self: center;
-    margin: 0; } }
-  @media all and (orientation: landscape) and (min-height: 400px) {
-    .num {
-      margin-bottom: 5%; } }
-
-@media all and (orientation: landscape) {
+    margin: 0; }
   .productImg-div {
-    grid-row: 2 / 12;
-    grid-column: 7 / 12;
-    align-self: center; }
+    align-self: center;
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    display: inline-grid; }
     .productImg-div__img {
+      align-self: center;
       max-width: 100%;
       height: auto;
       overflow: hidden; }
   .explain__heading {
-    grid-row: 4 / 5;
-    grid-column: 2 / 7;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     text-align: center;
-    font-size: 14px;
+    font-size: 16px;
     color: black;
     font-weight: bold;
-    margin: 0; } }
+    margin: 0;
+    align-self: center; } }
   @media all and (orientation: landscape) and (min-height: 400px) {
     .explain__heading {
-      margin: 5% 0;
       font-size: 18px; } }
 
 @media all and (orientation: landscape) {
   .explain__paragraph {
-    grid-row: 5 / 9;
-    grid-column: 2 / 7;
-    font-size: 12px;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    font-size: 14px;
     margin: 0;
-    padding-top: 5%;
-    text-align: center; } }
+    text-align: center;
+    align-self: center; } }
   @media all and (orientation: landscape) and (min-height: 400px) {
     .explain__paragraph {
       font-size: 16px; } }
@@ -408,86 +388,120 @@ body {
   .explain__paragraph {
     font-size: 16px; } }
 
-/*
-.about {
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) {
+  .about {
+    height: 100vh;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(48, 1fr);
-    font-size: 10px;
-    background: rgba(196,196,196, 0.29);
-    height: 140vh;
-}
-
-.productImg1-div {
-    grid-row: 12 / 20;
-    grid-column: 2 / 12;
-
-    &__img {
-        max-width: 100%;
-        height: auto;
-        overflow: hidden;
-    }
-}
-
-.explain1 {
-    grid-row: 6 / 9;
-    grid-column: 2 / 12;
-    text-align: center;
-}
-
-.productImg2-div {
-    grid-row: 39 / 46;
-    grid-column: 2 / 12;
-
-    &__img {
-        max-width: 100%;
-        height: auto;
-        overflow: hidden;
-    }
-}
-
-.explain2 {
-    grid-row: 28 / 32;
-    grid-column: 2 / 12;
-    text-align: center;
-}
-
-.about__heading {
-    font-size: 15px;
-    color: black;
-    font-weight: bold;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 5%;
     margin: 0;
+    grid-gap: 5%; } }
 
-}
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 600px) {
+  .about {
+    padding-top: 5%; } }
 
-.about__paragraph {
-    font-size: 13px;
-}
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) {
+  .about-item {
+    display: grid;
+    grid-template-rows: 1fr 2fr 5fr 4fr;
+    grid-template-columns: 1fr;
+    height: 75vh;
+    grid-gap: 5%; } }
 
-.num {
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) {
+  .num {
+    display: block;
+    grid-row: 1;
+    padding: 5%; } }
+
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 700px) {
+  .num {
+    padding: 5%;
+    height: 25px;
+    width: 25px;
+    line-height: 25px;
+    font-size: 25px; } }
+
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) {
+  .explain__heading {
+    grid-row: 2;
+    font-size: 20px; } }
+
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) {
+  .productImg-div {
+    grid-row: 3;
+    grid-column: 1;
+    display: inline-grid; }
+    .productImg-div__img {
+      max-width: 60%;
+      justify-self: center; } }
+    @media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) and (min-height: 700px) {
+      .productImg-div__img {
+        max-width: 80%; } }
+
+@media all and (orientation: landscape) and (min-width: 1000px) and (min-height: 500px) {
+  .explain__paragraph {
+    grid-row: 4;
+    align-self: start; } }
+
+@media all and (orientation: landscape) and (min-width: 1100px) and (min-height: 500px) {
+  .explain__heading {
+    font-size: 22px; } }
+
+@media all and (orientation: landscape) and (min-width: 1200px) {
+  .about-item {
+    grid-gap: 10%; }
+  .num {
+    padding: 7.5%;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+    font-size: 30px; } }
+
+@media all and (orientation: landscape) and (min-width: 1300px) {
+  .about {
+    padding-bottom: 5%; }
+  .explain__heading {
+    font-size: 24px; }
+  .explain__paragraph {
+    font-size: 20px; } }
+
+@media all and (orientation: landscape) and (min-width: 1350px) {
+  .explain__heading {
+    font-size: 28px; }
+  .explain__paragraph {
+    font-size: 22px; } }
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif; }
+
+.quote {
+  background: #86b639;
+  padding: 10%;
+  color: white;
+  font-size: 15px;
+  font-style: italic;
+  text-align: center; }
+  .quote-mark {
     background: #AADC59;
     border-radius: 50%;
     color: white;
     padding: 10%;
-    height: 40px;
-    width: 40px;
+    height: 20px;
+    width: 20px;
     text-align: center;
-    line-height: 40px;
-    font-size: 30px;
+    line-height: 20px;
+    font-size: 20px;
     font-weight: bold;
-    align-self: center;
-    justify-self: center;
-
-    &--1{
-        grid-row: 2 / 6;
-        grid-column: 6 / 8;
-    }
-
-    &--2{
-        grid-row: 24 / 28;
-        grid-column: 6 / 8;
-    }
-    
-}
-
-*/
+    align-self: center; }
+  .quote-attr {
+    font-size: 10px;
+    font-style: normal;
+    background: #AADC59;
+    color: black;
+    border-radius: 10px;
+    font-weight: bold; }
