--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import 'header';
+@import 'about';
 
 
 body {
@@ -8,142 +9,15 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-
-// layout by height. start with low height (ie landscape mode on phone), then portrait mode on phone, then desktop
-@media all and (orientation:portrait) {
-
-.about {
-    display: grid;
-    background: rgba(196,196,196, 0.29);
-    height: 150vh;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 1fr);
-    padding-bottom: 20%;
-}
-
-.about-item {
-    display: grid;
-    grid-template-rows: repeat(12, 1fr);
-    grid-template-columns: repeat(12, 1fr);
-    height: 75vh;
-}
-
-.num {
-    grid-row: 2 / 4;
-    grid-column: 6 / 8;
-    background: #AADC59;
-    border-radius: 50%;
-    color: white;
+.quote {
+    background: #86b639;
     padding: 10%;
-    height: 40px;
-    width: 40px;
+    color: white;
+    font-size: 15px;
+    font-style: italic;
     text-align: center;
-    line-height: 40px;
-    font-size: 30px;
-    font-weight: bold;
-    align-self: center;
-    justify-self: center;
-}
 
-.productImg-div {
-    grid-row: 8 / 13;
-    grid-column: 2 / 12;
-    align-self: end;
-    display: inline-grid;
-
-    &__img {
-        max-width: 100%;
-        height: auto;
-        overflow: hidden;
-        justify-self: center;
-
-        @media (min-width: 375px) {
-            max-width: 80%;
-        }
-    }
-}
-
-.explain__heading {
-        grid-row: 4 / 5;
-        grid-column: 2 / 12;
-        text-align: center;
-        font-size: 15px;
-        color: black;
-        font-weight: bold;
-
-        @media (min-height: 600px) {
-            font-size: 17px;
-        }
-
-        @media (min-height: 700px) {
-            font-size: 19px;
-        }
-
-        @media (min-height: 800px) {
-            font-size: 21px;
-        }
-
-        @media (min-height: 1200px) {
-            font-size: 25px;
-        }
-    }
-
-.explain__paragraph {
-        font-size: 12px;
-        grid-row: 5 / 7;
-        grid-column: 2 / 12;
-        text-align: center;
-
-        @media (min-height: 600px) {
-            font-size: 14px;
-        }
-
-        @media (min-height: 700px) {
-            font-size: 16px;
-        }
-
-        @media (min-height: 800px) {
-            font-size: 18px;
-        }
-
-        @media (min-height: 1200px) {
-            font-size: 22px;
-        }
-    }
-
-    @media (min-height: 908px) {
-    
-    }
-
-}
-
-@media all and (orientation:landscape) {
-
-    .about {
-        display: grid;
-        background: rgba(196,196,196, 0.29);
-        height: 200vh;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(2, 1fr);
-
-        @media (min-width: 1000px) {
-            height: 100vh;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr;
-        }
-    }
-    
-    .about-item {
-        display: grid;
-        grid-template-rows: repeat(12, 1fr);
-        grid-template-columns: repeat(12, 1fr);
-        height: 100vh;
-    }
-    
-    .num {
-        display: none;
-        grid-row: 3 / 5;
-        grid-column: 4 / 5;
+    &-mark {
         background: #AADC59;
         border-radius: 50%;
         color: white;
@@ -155,152 +29,15 @@ body {
         font-size: 20px;
         font-weight: bold;
         align-self: center;
-        justify-self: center;
-        margin: 0;
-
-        @media (min-height: 400px) {
-            margin-bottom: 5%;
-        }
-
     }
-    
-    .productImg-div {
-        grid-row: 2 / 12;
-        grid-column: 7 / 12;
-        align-self: center;
-    
-        &__img {
-            max-width: 100%;
-            height: auto;
-            overflow: hidden;
-        }
 
-    }
-    
-    
-    .explain__heading {
-        grid-row: 4 / 5;
-        grid-column: 2 / 7;
-        text-align: center;
-        font-size: 14px;
+    &-attr{
+        font-size: 10px;
+        font-style: normal;
+        background: #AADC59;
         color: black;
+        border-radius: 10px;
         font-weight: bold;
-        margin: 0;
-
-        @media (min-height: 400px) {
-            margin: 5% 0;
-            font-size: 18px;
-        }
-    
-        }
-    
-        .explain__paragraph {
-            grid-row: 5 / 9;
-            grid-column: 2 / 7;
-            font-size: 12px;
-            margin: 0;
-            padding-top: 5%;
-            text-align: center;
-
-            @media (min-height: 400px) {
-                font-size: 16px;
-            }
-
-        }  
-
-        @media (min-width: 600px) {
-            .explain__heading {
-                font-size: 18px;
-            }
-
-            .explain__paragraph {
-                font-size: 16px;
-            }
-
-        }
-    }    
-
-
-/*
-.about {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(48, 1fr);
-    font-size: 10px;
-    background: rgba(196,196,196, 0.29);
-    height: 140vh;
-}
-
-.productImg1-div {
-    grid-row: 12 / 20;
-    grid-column: 2 / 12;
-
-    &__img {
-        max-width: 100%;
-        height: auto;
-        overflow: hidden;
     }
 }
 
-.explain1 {
-    grid-row: 6 / 9;
-    grid-column: 2 / 12;
-    text-align: center;
-}
-
-.productImg2-div {
-    grid-row: 39 / 46;
-    grid-column: 2 / 12;
-
-    &__img {
-        max-width: 100%;
-        height: auto;
-        overflow: hidden;
-    }
-}
-
-.explain2 {
-    grid-row: 28 / 32;
-    grid-column: 2 / 12;
-    text-align: center;
-}
-
-.about__heading {
-    font-size: 15px;
-    color: black;
-    font-weight: bold;
-    margin: 0;
-
-}
-
-.about__paragraph {
-    font-size: 13px;
-}
-
-.num {
-    background: #AADC59;
-    border-radius: 50%;
-    color: white;
-    padding: 10%;
-    height: 40px;
-    width: 40px;
-    text-align: center;
-    line-height: 40px;
-    font-size: 30px;
-    font-weight: bold;
-    align-self: center;
-    justify-self: center;
-
-    &--1{
-        grid-row: 2 / 6;
-        grid-column: 6 / 8;
-    }
-
-    &--2{
-        grid-row: 24 / 28;
-        grid-column: 6 / 8;
-    }
-    
-}
-
-*/
